# hello-esp32h2-embassy

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
