[package]
name = "hello-esp32h2-embassy"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32h2",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32h2", "log"] }
embassy-executor   = { version = "0.5.0", features = ["integrated-timers"] }
embassy-time   = { version = "0.3.2", features = [] }
embassy-sync = "0.6.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.7.0"
esp-hal = { version = "0.19.0", features = ["async", "esp32h2"] }
esp-hal-procmacros = { version = "0.12.0", features = ["embassy"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32h2", "integrated-timers", "log"] }
static_cell = "2.1.0"
log = "0.4.22"
